A few more fixes to make staticmatic starter work out of the box.

--- a/src/stylesheets/_typo.scss
+++ b/src/stylesheets/_typo.scss
@@ -10,8 +10,8 @@ body {
 /* Typo scaler */
 .smaller { font-size: .8em; line-height: 1.4; }
 .small, small { font-size: .925em; line-height: 1.3; }
-.medium { font-size: 1.125em; line-height: 1.3; margin-bottom: 1em; }
-.large { font-size: 1.25em; line-height: 1.4; margin-bottom: 1em; }
+.medium { font-size: 1.125em; line-height: 1.3; }
+.large { font-size: 1.25em; line-height: 1.4; }
 .larger { font-size: 1.5em; line-height: 1.3; }
 
 .caps       { text-transform: uppercase; }
